--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ body{
     margin: 5% 0%;
   }
   
-  #resume-button-2{
+  #resume-link-2{
     background-color: white;
     font-weight: bolder;
     font-size: larger;
